 $Id: ChangeLog,v 1.131.2.25 2008/11/11 07:32:37 uehira Exp $

2008-11-11  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* if 'char' is unsigned, exit make command.
	* Version 1.1.96-LIB released.

2008-06-21  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* prog/chtbl2kml : added.

2008-05-19  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.95-LIB released.
	* src/winlib.c : dec_bcd() : bug fixed from 2008-05-16 commitment.

2008-05-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* struct Shm : src/winlib.h

2008-05-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* SWAPL(a), SWAPS(a), SWAPF(a) : common	declaration in src/winlib.h. 
	* LongFromBigEndian(a) : common	declaration in src/winlib.h. 
	* src/winlib.h : include src/subst_func.h.
	* src/winlib.c : strncmp2(), strcmp2().

2008-05-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.94-LIB released.
	* b2d[], d2b[] : common declaration in src/winlib.h.

2008-05-07  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.93-LIB released.
	* src/relay.c : use library (src/win_log.c).

2008-05-01  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.92-LIB released.
	* MF Version 1.1.87. (2008-04-17 --- 2008-04-24)

2008-04-24  Shigeki Nakagawa  <nakagawa@eri.u-tokyo.ac.jp>
	* src/events.c, src/wdisk.c : add USE_LARGE_FS option.
           In very large file system (maybe over 8TB) on linux server,
           use statfs64(2) instead of statfs(2).

2008-04-17  Tsuruoka Hiroshi <tsuru@eri.u-tokyo.ac.jp>
	* bug fix : datej.pl.in
	* MeSO-net : wintosac.c, wintowin.c

2008-04-14  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c, src/hypomhc.c : check FreeBSD OS version.
	* MFH (2008-04-13 --- 2008-04-14)

2008-04-13  Shigeki Nakagawa  <nakagawa@eri.u-tokyo.ac.jp>
	* src/wdisk.c (main): bug fix: initialize eobsize=0 
	                           (reported by M. Sato)

2008-04-07  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.91-LIB released.