@@ -1,4 +1,7 @@
- $Id: ChangeLog,v 1.131.2.25 2008/11/11 07:32:37 uehira Exp $
+ $Id: ChangeLog,v 1.131.2.26 2008/11/13 02:56:14 uehira Exp $
+
+2008-11-13  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
+	* suppress warnings.
 
 2008-11-11  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* if 'char' is unsigned, exit make command.
